Added one word to figurine page

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,10 +36,9 @@
 <!-- started 2022/4/21 -->
 <h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
 <p>Last updated 🌒 Thu, Apr 21st, 2022</p>
-<p>Here’s my small collection of figurines and other assorted cute things.
+<p>Here’s my small IRL collection of figurines and other assorted cute things.
 Most are “prize figures” of the variety you could win from a Japanese “skill” claw machine,
 but I do no such thing because I don’t live anywhere near one stocked with prize figures I would actually like.</p>
-<!-- Did you know that limited run collectible lumps of PVC and ABS appreciate in value over time the longer they've been out of production? -->
 <p>I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them though.
 This page will do for now, links take you to their catalog entry on <em>mfc</em>.</p>
 <h2>Collection<span id="Collection"></span></h2>
