myfigurecollection changed their backend API endpoints, fixing

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -61,11 +61,11 @@ This page will do for now, links take you to their catalog entry on <em>mfc</em>
 </thead>
 <tbody>
 <tr>
-<td><img src="https://static.myfigurecollection.net/pics/figure/186.jpg" alt="ico-fig" /></td>
+<td><img src="https://static.myfigurecollection.net/upload/items/186.jpg" alt="ico-fig" /></td>
 <td><strong>Owned</strong></td>
 </tr>
 <tr>
-<td><img src="https://static.myfigurecollection.net/pics/figure/186.jpg" alt="ico-fig-fake" /></td>
+<td><img src="https://static.myfigurecollection.net/upload/items/186.jpg" alt="ico-fig-fake" /></td>
 <td><strong>Fake/Knockoff</strong></td>
 </tr>
 </tbody>
@@ -144,7 +144,7 @@ for (var i in figs) {
 		l2 = document.createElement('img');
 		l2.alt = alt;
 		l2.title = title;
-		l2.src = "https://static.myfigurecollection.net/pics/figure/" + id + ".jpg";
+		l2.src = "https://static.myfigurecollection.net/upload/items/" + id + ".jpg";
 		l1.appendChild(l2);
 
 	thumbs.appendChild(l1);
@@ -156,7 +156,7 @@ for (var i in figs) {
 		l2.href = "https://myfigurecollection.net/pictures.php?itemId=" + id;
 
 			l3 = document.createElement('img');
-			l3.src = "https://static.myfigurecollection.net/pics/figure/big/" + id + ".jpg";
+			l3.src = "https://static.myfigurecollection.net/upload/items/big/" + id + ".jpg";
 			l3.title = title;
 			l3.alt = 'nolink';
 			l2.appendChild(l3);
