--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -34,9 +34,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- created 2020/10/22 -->
-<!-- updated 2022/4/17 -->
+<!-- updated 2022/4/26 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
-<p>Last updated 🌑 Sun, Apr 17th, 2022.</p>
+<p>Last updated 🌔 Tue, Apr 26th, 2022.</p>
 <blockquote>
 <p><strong>NOTICE</strong><br/><br/>
 <em>I cannot recommend going the SFF route at this time, or even the discrete GPU route in general, every worthwhile card on this list has skyrocketed in price on the used market.</em></p>
@@ -257,8 +257,8 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 <tr>
 <td style="text-align: left">AMD Radeon RX 6400</td>
 <td style="text-align: center">2022</td>
-<td style="text-align: center"><em>unknown</em></td>
-<td style="text-align: left">Unreleased as of posting, available from Sapphire</td>
+<td style="text-align: center">6966</td>
+<td style="text-align: left">Available from Sapphire.</td>
 </tr>
 </tbody>
 </table>
