Replacing broken link: hoshi no kakeru

--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@ b+cl ZKFn fyFl VKKY SxFU Yq5m pymZ pBcZ JAR/ fkH1 AAAA
 <a href="https://www.youtube.com/watch?v=JmvOuyeqoLw&amp;list=PLJQumuuts49qC9sbhf4Deky0-XZuY09A_"><img src="/static/button/vocaloid.gif" alt="ico-vocaloid" /></a>
 <a href="/EEEEEEEEEEEEEEEEEEEEEEE"><img src="/static/button/mikuproved.gif" alt="ico-miku3" /></a>
 <a href="https://www.youtube.com/watch?v=3rsBLRFONEs"><img src="/static/button/hatsunemiku1.gif" alt="ico-miku1" /></a>
-<a href="https://www.youtube.com/watch?v=NJAghsisnok"><img src="/static/button/miku.gif" alt="ico-miku2" /></a>
+<a href="https://www.youtube.com/watch?v=Z7VnvCWCOww"><img src="/static/button/miku.gif" alt="ico-miku2" /></a>
 <a href="https://www.youtube.com/watch?v=KGD-mFTY6mw"><img src="/static/button/konata.gif" alt="ico-konata" /></a>
 <a href="/eeeeeeeeeeeeeeeeee"><img src="/static/button/88x31pinkmarble.gif" alt="ico-filler1" /></a>
 <a href="https://validator.w3.org/check/referer"><img src="/static/button/valid-html5-blue.svg" alt="ico-html" /></a>
