[CI] 4 changes 2022/5/17 12:23am UTC

--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -34,8 +34,8 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles<span id="Selected-documentation-and-usage-notes-for-my-dotfiles"></span></h1>
-<p><strong>Revision No. 827, commit <code>750fa57</code>.</strong></p>
-<p><strong>“path-gitstatus: Documenting known issues with symlink abuse”</strong></p>
+<p><strong>Revision No. 828, commit <code>84b6e1a</code>.</strong></p>
+<p><strong>“Documentation, interactive shell”</strong></p>
 <div class="toc">
 <p>Table of Contents</p>
 <ul>
@@ -83,6 +83,7 @@
 </li>
 <li><a href="#Non-standard-commands">Non-standard commands</a>
 <ul>
+<li><a href="#Interactive-shell">Interactive shell</a></li>
 <li><a href="#cd"><code>cd</code></a></li>
 <li><a href="#chromium"><code>chromium</code></a>
 <ul>
@@ -108,19 +109,19 @@
 <p>View changelog since the last revision as <a href="https://github.com/microsounds/atelier/compare/HEAD~1...HEAD.diff"> <code>diff HEAD~1...HEAD</code></a></p>
 <p>The verbosity factor of this document compared to comment lines of code
 in this repo is about <strong>5:1</strong>.</p>
-<p>If this document is <em>25.9KiB</em> in
+<p>If this document is <em>26.4KiB</em> in
 size, and the approximate size of all comment lines of code is
 <em>60.8KiB</em> then this document
-currently covers about <b style="font-size: 130%;">8.53%</b>
+currently covers about <b style="font-size: 130%;">8.70%</b>
 of all implemented features and behavior in this repository.
 This is just an <a href="https://github.com/microsounds/microsounds.github.io/raw/master/.scripts/dotfiles-ls.sh">automated guess</a> though.</p>
 <p>This document and repository is also mirrored at
 <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on GitHub.</p>
-<p>Last updated 🌑 Sun, May 15th, 2022.</p>
+<p>Last updated 🌑 Mon, May 16th, 2022.</p>
 <!-- header and github badges -->
 <!-- github readmes only support align attributes for styling -->
 <div style="text-align: center;">
-<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime30.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
+<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime2.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
 <p><img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github" alt="ico-freq" />
 <img src="https://img.shields.io/github/repo-size/microsounds/atelier?logo=github" alt="ico-size" />
 <a href="https://github.com/microsounds/atelier/actions/workflows/ci.yml" title="unit tests"><img src="https://github.com/microsounds/atelier/actions/workflows/ci.yml/badge.svg" alt="ico-ci" /></a>
@@ -312,7 +313,7 @@ This is meant to be a lightweight port with modifications, do not initiate a ful
 </li>
 <li>When pulling from upstream, stash changes or <code>git reset --hard</code> to prevent merge conflicts.
 <ul>
-<li>Use <code>patch -p1 &lt; ~/.termux/termux-diff.patch</code> to restore changes if stash is lost.</li>
+<li>Use <code>patch -p1 &lt; ~/.termux/diff.patch</code> to restore changes if stash is lost.</li>
 </ul>
 </li>
 </ol>
@@ -675,6 +676,10 @@ See <a href="https://github.com/microsounds/atelier/raw/master/.local/include/th
 </li>
 <li><code>/usr/bin</code> system-wide executables</li>
 </ol>
+<h2>Interactive shell<span id="Interactive-shell"></span></h2>
+<p><img src="https://raw.githubusercontent.com/microsounds/microsounds/master/dotfiles/path-gitstatus.png" alt="path-gitstatus" /></p>
+<p>The prompt path will feature embedded <code>git</code> information provided by <a href="https://github.com/microsounds/atelier/raw/master/Scripts/git_status.sh"><code>path-gitstatus</code></a> highlighting the root of a <code>git</code> worktree and it’s status.</p>
+<p>Outside of <code>git</code> worktrees, the path component will be mangled by <a href="https://github.com/microsounds/atelier/raw/master/.local/lib/path-shorthand"><code>path-shorthand</code></a> and be truncated to the last <code>$PATH_WIDTH</code> characters <em>(default is 50)</em> for improved usability.</p>
 <h2><code>cd</code><span id="cd"></span></h2>
 <ul>
 <li>
@@ -948,12 +953,12 @@ found in the current revision:</em></p>
 <li><code>xwin_widgets.sh v0.4</code></li>
 </ul>
 <p><em>Total on-disk size of the current revision is
-202.02KiB
+202.52KiB
 out of a total compressed git history size of
-717.85KiB.</em></p>
+728.91KiB.</em></p>
 </blockquote>
 <h1>Complete source listing<span id="Complete-source-listing"></span></h1>
-<pre><code><span class="term-prompt">root@6863048a20fe</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
+<pre><code><span class="term-prompt">root@3234c233fd8f</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
 -rw-r--r-- 1 8.4K   May 12 2022 02:36 rev. 130 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.bashrc">.bashrc</a>
 -rw-r--r-- 1 1.1K   Mar 11 2022 22:34 rev. 77  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts">.comforts</a>
 -rw-r--r-- 1  395   Mar 10 2022 17:55 rev. 8   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts-git">.comforts-git</a>
@@ -1077,10 +1082,10 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1 1.4K   Dec  3 2021 23:13 rev. 19  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_webm.sh">Scripts/xwin_webm.sh</a>
 -rwxr-xr-x 1 3.0K   Dec 13 2021 02:28 rev. 17  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_widgets.sh">Scripts/xwin_widgets.sh</a>
 -rw-r--r-- 1 2.0K   Mar 12 2022 17:16 rev. 5   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Userscripts/youtube_screenshot.user.js">Userscripts/youtube_screenshot.user.js</a>
--rw-r--r-- 1  26K   Apr  7 2022 16:51 rev. 178 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
+-rw-r--r-- 1  27K   May 16 2022 17:16 rev. 179 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
 </code></pre>
 <!-- created Mon, 19 Aug 2019 22:48:18 -0700 -->
-<!-- updated Sun, 15 May 2022 23:36:17 -0700 -->
+<!-- updated Mon, 16 May 2022 17:16:24 -0700 -->
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
