Some changes to outbound links area

--- a/index.htm
+++ b/index.htm
@@ -108,7 +108,9 @@ b+cl ZKFn fyFl VKKY SxFU Yq5m pymZ pBcZ JAR/ fkH1 AAAA
 <a href="https://www.gnu.org/licenses/gpl-3.0"><img src="/static/button/gpl.png" alt="ico-gpl" /></a></p>
 <p><a href="/static/button/badge.png" title="static version"><img src="/static/button/badge.png" alt="ico-badge" /></a>
 <a href="/static/button/badge.gif" title="animated version"><img src="/static/button/badge.gif" alt="ico-badge" /></a></p>
-<p><span class="aside">If you enjoyed my website and you’d like to link here, feel free to use my badge on your own site.</span></p>
+<p><span class="aside">If you enjoyed my site and you wish to experience Neocities-style camaraderie, feel free to use my badge on your own site.</span>
+<br/>
+<span class="aside">A member site of <a href="https://1mb.club">1MB Club</a>, written in <a href="https://github.com/microsounds/microsounds.github.io#-validation">polyglot HTML5</a>, reject JS frameworks and spit on all their advocates!</span></p>
 </div>
 <script type="text/javascript">
 /* <![CDATA[ */
