Added 5 figures all at once

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -34,8 +34,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
+<!-- updated 2022/7/4 -->
 <h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
-<p>Last updated 🌒 Thu, Apr 21st, 2022</p>
+<p>Last updated 🌖 Mon, Jul 4th, 2022</p>
 <p>Here’s my small IRL collection of figurines and other assorted cute things.
 Most are “prize figures” of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
 Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of my one and only muse, so I can only buy them.</p>
@@ -98,6 +99,11 @@ Do not assume that physical outlets located in shopping malls, indoor or outdoor
 
 var figs = [
 	/* ids prepended with x are knockoffs */
+	[ '944728', 'furyu miku bicute bunnies' ],
+	[ '1311067', 'miku artist masterpiece princess alice' ],
+	[ '1268909', 'miku artist masterpiece 14th anniv.' ],
+	[ '1293291', 'furyu sakura miku noodle stopper' ],
+	[ '886807', 'taito sakura miku 2020 ver.' ],
 	[ '1216990', 'racing miku 2021 espresto' ],
 	[ '1035745', "mega 39's breathe you SPM miku" ],
 	[ '1112719', 'miku big nuigurumi plush' ],
