--- a/notes/index.htm
+++ b/notes/index.htm
@@ -37,7 +37,7 @@
 <p>Writings and notes on random topics, sorted by date first posted.</p>
 <div class="index">
 <ul>
-<li><a href="figures.htm">My Collection of Assorted Figurines</a> — <em>April 2022</em></li>
+<li><a href="figures.htm">My Collection of Assorted Figurines</a> — <em>April 2022 <span style="font-size: 85%;">(updated July 2022)</span></em></li>
 <li><a href="why-copyleft.htm">On Copyleft and why I use GPLv3</a> — <em>February 2022</em></li>
 <li><a href="low-profile-gpus-for-sff-pcs.htm">List of low profile GPUs for small form factor PCs (SFFs)</a> — <em>October 2020 <span style="font-size: 85%;">(updated April 2022)</span></em></li>
 <li><a href="dotfiles.htm">Selected documentation and usage notes for my dotfiles</a> — <em>August 2019 <span style="font-size: 85%;">(updated June 2022)</span></em></li>
