--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -39,7 +39,7 @@
 <p>Last updated 🌖 Mon, Jul 4th, 2022</p>
 <p>Here’s my small IRL collection of figurines and other assorted cute things.
 Most are “prize figures” of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
-Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of my one and only muse, so I can only buy them.</p>
+Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of my <a href="https://www.youtube.com/watch?v=NzEKNzlhJSU">one and only muse</a>, so I can only buy them.</p>
 <p>I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them though.
 This page will do for now, links take you to their catalog entry on <em>mfc</em>.</p>
 <h2>Collection<span id="Collection"></span></h2>
