[microsounds@effe] 2 changes 2022/7/6 1:55am PDT

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -111,21 +111,21 @@ var figs = [
 	[ '776143', 'hatsune miku 2nd season Summer ver.' ],
 	[ '4741', 'hatsune miku EX figure 2009' ],
 	[ '1150601', 'miku nesoberi nuigurumi (extra tiny)' ],
-	[ '798190', 'sakura miku SPM' ],
-	[ '720383', 'fate/extella link astolfo SPM' ],
+	[ '798190', 'sega sakura miku SPM' ],
+	[ '720383', 'sega fate/extella link astolfo SPM' ],
 	[ '693275', 'miku mega jumbo nuigurumi plush 2018' ],
 	[ '675904', 'gochiusa sxarp nendoroid #929' ],
 	[ '689123', 'snow princess miku nendoroid #1000' ],
 	[ '464596', 'konosuba megumin nendoroid #725' ],
-	[ '440687', 'project diva X SPM miku' ],
-	[ '583734', 'izayoi sakura prize figure' ],
+	[ '440687', 'sega project diva X SPM miku' ],
+	[ '583734', 'izayoi sakuya prize figure' ],
 	[ '200768', 'funko pop rocks miku #39' ],
-	[ '246546', 'project diva F2nd miku' ],
+	[ '246546', 'sega project diva F2nd miku' ],
 	[ 'x287774', 'umaru-chan nendoroid #524' ],
 	[ 'x26113', 'snow miku nendoroid #150' ],
-	[ '198604', 'project diva 2nd miku' ],
+	[ '198604', 'sega project diva 2nd miku' ],
 	[ '47413', 'kogami akira lucky star banpresto' ],
-	[ '167123', 'project diva arcade miku 2012' ],
+	[ '167123', 'sega project diva arcade miku 2012' ],
 	[ '100292', 'hatsune miku plush great eastern 2012' ],
 ];
 
