--- a/index.htm
+++ b/index.htm
@@ -37,8 +37,8 @@
 <noscript>
 	<em>You have JavaScript disabled, certain multimedia elements will not work as expected.</em>
 </noscript>
-<!-- original: https://gelbooru.com/index.php?page=post&s=view&id=3757995 -->
-<p><img src="/static/starry.jpg" alt="heading" /></p>
+<p><img src="/static/starry.jpg" alt="heading" />
+<span class="aside"><sup><em>Original illustration <a href="https://gelbooru.com/index.php?page=post&amp;s=view&amp;id=3757995">© 2015 tanakatam</a></em></sup></span></p>
 <h2>About me<span id="About-me"></span></h2>
 <p>This is my little sanctuary where I bottle up the unix computer zealot in me, you can call me <code>microsounds</code> if you want.</p>
 <p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="https://files.catbox.moe/gn20dj.pdf" title="Bell System Technical Journal Vol. 57, No. 6, Part 2, pp. 1905- (July-Aug. 1978), Dennis Ritchie, Ken Thompson">unix</a> <a href="http://files.catwell.info/misc/mirror/the-unix-programming-environment-kernighan-pike.pdf" title="The Unix Programming Environment (1984), Brian Kernighan, Rob Pike">programming</a> <a href="http://www.catb.org/~esr/writings/taoup/html/" title="The Art of Unix Programming (2003), Eric S. Raymond">environment</a>.
