Updated thoughts on intellectual property law

--- a/notes/why-copyleft.htm
+++ b/notes/why-copyleft.htm
@@ -34,10 +34,12 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- posted 2022/2/5 -->
-<p><span class="right">🌖 Sat, Feb 5th, 2022</span></p>
+<!-- updated 2022/9/10 -->
+<p><span class="right">🌑 Sat, Sep 10th, 2022</span></p>
 <h1>On Copyleft and why I use GPLv3<span id="On-Copyleft-and-why-I-use-GPLv3"></span></h1>
 <p>This is a short outline on guaranteeing creative freedom to users of your works through copyleft.
-Licensing of creative works is an <em><strong>extremely</strong></em> tiresome topic and I don’t want to put more thought into it than whatever is contained on this page.</p>
+Licensing of creative works is an <em><strong>extremely</strong></em> tiresome topic so I keep all my opinions on intellectual property law contained to this page.</p>
+<!-- Licensing of creative works is an ***extremely*** tiresome topic and I don't want to put more thought into it than whatever is contained on this page. -->
 <p>You can use the term <em><strong>“software”</strong></em> in place of <em><strong>“creative works”</strong></em> and it should have the same gist.</p>
 <p><a href="https://creativecommons.org/licenses/by-sa/4.0" title="Creative Commons Attribution-ShareAlike 4.0"><img src="/static/button/cc.png" alt="ico-cc" /></a>
 <a href="https://www.gnu.org/licenses/gpl-3.0" title="GNU General Public License version 3 or later"><img src="/static/button/gpl.png" alt="ico-gpl" /></a></p>
@@ -45,7 +47,7 @@ Licensing of creative works is an <em><strong>extremely</strong></em> tiresome t
 <ol>
 <li>
 <p><em>I want future users of my work (and derivative versions thereof) to be <strong>afforded the same creative freedoms</strong> I granted them when they first took delivery of my work, no matter the context.</em></p>
-<p><em>In the most general sense, these <a href="https://www.gnu.org/philosophy/free-sw.en.html#four-freedoms" title="FSF definition of free software">creative freedoms</a> include—</em></p>
+<p><em>In the most general sense, these <a href="https://www.gnu.org/philosophy/free-sw.en.html#four-freedoms" title="FSF definition of free software">creative freedoms</a> include, for any purpose—</em></p>
 <ol start="0">
 <li><em>The freedom to use the work.</em></li>
 <li><em>The freedom to study the work.</em></li>
@@ -64,20 +66,39 @@ Licensing of creative works is an <em><strong>extremely</strong></em> tiresome t
 </li>
 </ol>
 <h2>On permissive licenses and the public domain<span id="On-permissive-licenses-and-the-public-domain"></span></h2>
-<p>Oftentimes, creators <em>(usually programmers)</em>, will take the ideological <em><strong>“easy way out”</strong></em> by licensing their work under a more <a href="https://en.wikipedia.org/wiki/Permissive_software_license">permissive license</a>—a license which releases all <strong>practical</strong> copyright interest in their creative works, usually with one or two token restrictions such as requiring attribution.</p>
-<p>Permissive licenses that require only attribution are as good as public domain when derivative versions of your work can be re-licensed and be made legally unavailable for you to study, share and modify freely.</p>
+<p>Oftentimes, creators <em>(usually programmers)</em>, will take the ideological <em><strong>“pushover”</strong></em> approach by licensing their work under a more <a href="https://en.wikipedia.org/wiki/Permissive_software_license">permissive license</a>—a license which releases all <strong>practical</strong> copyright interest in their creative works, usually with one or two token restrictions such as requiring attribution.</p>
+<p>The reasons for doing this are many, but most can be summarized as:</p>
+<ul>
+<li><em>“All my online friends are doing it.”</em></li>
+<li><em>“Copyleft licenses are literally communism, I don’t know what words mean, I am a huge idiot.”</em> 🥴</li>
+<li><em>“I don’t care about legal mumbo-jumbo, I just want to code.”</em></li>
+<li><em>“I only write open source software to secure a tech industry job.”</em></li>
+</ul>
+<p>The last one almost invariably comes bundled with:</p>
+<ul>
+<li><em>“I have an irrational, utter fear of commercial interests overlooking or avoiding my copylefted work in favor of someone else’s permissive licensed work.”</em></li>
+</ul>
+<p>It’s not difficult to see why.
+Permissive licenses that require only attribution are as good as public domain when derivative versions of your work can be re-licensed and made proprietary, a normal copyrighted work with all rights reserved, making it legally unavailable for you to study, share and modify freely.</p>
 <p>As it stands, you can take anything from the <del>public</del> permissive domain, and not be required to contribute the resultant derivative work back into the same <del>public</del> permissive domain for others to use and benefit from, like you did initially.
-Re-licensing permissive works allows you to subscribe to the <em><strong>FYIGM™</strong></em> school of creative freedom—the legal equivalent of pulling up the ladder up behind you.</p>
-<p>Copyleft licenses give you the legal framework to prevent this from happening to you.</p>
+Re-licensing permissive works allows you to subscribe to the <em><strong>“fuck you, got mine™”</strong></em> school of creative freedom—the legal equivalent of pulling up the ladder up behind you.</p>
+<p>Copyleft licenses give you the legal framework to prevent this from happening to you or any future users of your works.</p>
 <div style="border-right: 2px;" class="aside right">
-<p>The most prominent example is Disney,
+<p>By far, the most prominent and egregious example is The Walt Disney Company
 who made their billions by <a href="https://derekkhanna.medium.com/disney-works-based-on-public-domain-eb49ac34c3da" title="Disney works based on the public domain">plundering public domain stories</a> and characters throughout the 20th century
-and then successfully lobbied to extend US copyright protections
-so that no person or company in this century could ever do the same with Disney’s works through the <a href="https://en.wikipedia.org/wiki/Copyright_Term_Extension_Act" title="Sonny Bono Copyright Term Extension Act of 1998">Sonny Bono Act of 1998</a>.</p>
+and then successfully lobbied to extend US copyright protections well past the practical limits of human lifespan—so that no individual or company in this century could ever do the same with Disney’s own works through the <a href="https://en.wikipedia.org/wiki/Copyright_Term_Extension_Act" title="Sonny Bono Copyright Term Extension Act of 1998">Sonny Bono Act of 1998</a>.</p>
 </div>
 <p>When you remove all legal barriers for re-licensing of creative works, <a href="https://www.cs.vu.nl/~ast/intel/" title="Permissively licensed OS is used by Intel in the most prolific spyware implementation in the world.">people will do so</a>, and some might feel so emboldened they won’t even attribute you.</p>
 <p>So long as intellectual property law continues to exist in its current form, copyleft licenses are the key to guaranteeing creative freedoms to users of your work, no matter how trivial.
 You should reject permissive licenses in all their forms, and spit on all their advocates!</p>
+<h2><em>“But what if I want to make money off my work?”</em><span id="_But-what-if-I-want-to-make-money-off-my-work_"></span></h2>
+<p>Copyleft does not preclude the possibility of financial gain from your works, but if your particular category of creative work makes monetization difficult or untenable, there is no legal roadblock stopping you from <a href="https://en.wikipedia.org/wiki/Multi-licensing">dual-licensing</a> your works.</p>
+<p>Dual-licensing, or multi-licensing, is releasing your works under a copyleft license to the general public
+while offering entities not willing to abide by the terms of the copyleft license a unique, yet legally binding licensing agreement
+to use your copyrighted work as they wish in exchange for royalties, money, gainful employment, whatever you want.</p>
+<p>Your copyright is still legally yours, some rights reserved, and will continue to be for the rest of your life plus 70 years.
+A copyleft license only give <a href="https://www.gnu.org/philosophy/free-sw.en.html#four-freedoms" title="FSF definition of free software">selected rights</a> to the general public, with the expectations that those rights stay intact for all future users.
+In effect, you can <em>“sell out”</em> without truly <em>selling out</em> your or your user’s creative freedoms.</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
